@@ -1,3 +1,8 @@
+2004-11-18  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* src/check_config.c:
+	Do not depend on nfds_t definition under Win32 and FreeBSD.
+
 2004-11-16  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* aws-net-std__ipv6.adb:
